--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
+blinker==1.4
 cachelib==0.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
 cs50==8.0.1
 Flask==2.0.2
+Flask-Mail==0.9.1
 Flask-Session==0.4.0
 greenlet==1.1.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+Pillow==9.0.0
 requests==2.26.0
 SQLAlchemy==1.4.28
 sqlparse==0.4.2
